# thesistand

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRD.md  PRD2.md  main.py  pyproject.toml  pyrefly.toml
data/: documents.json
data/chroma_db/9ac3c159-7b36-4e75-856c-acc1ff8422c2/: index_metadata.pickle
docs/: architecture.md  asyncio-gather-explained.md  daily-workflow.md  glob-explained.md  learning-roadmap.md  library.md  production-roadmap.md  senior_project_workflow.md  std_project_workflow.md  study.md  visual-pages-bug.md  workflow-revision-guide.md
src/: main.py
src/agents/: graph.py  nodes.py  state.py
src/rag/: chunker.py  parser.py  registry.py  vectorstore.py
tests/: test_main.py
tests/agents/: test_graph.py  test_nodes.py  test_state.py
tests/rag/: test_chunker.py  test_parser.py  test_vectorstore.py
